Source/WebCore/css/html.css
/*
 * The default style sheet used to render HTML.
 *
 * Copyright (C) 2000 Lars Knoll (knoll@kde.org)
 * Copyright (C) 2003-2025 Apple Inc. All rights reserved.
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Library General Public
 * License as published by the Free Software Foundation; either
 * version 2 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Library General Public License for more details.
 *
 * You should have received a copy of the GNU Library General Public License
 * along with this library; see the file COPYING.LIB.  If not, write to
 * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
 * Boston, MA 02110-1301, USA.
 *
 */

@namespace "http://www.w3.org/1999/xhtml";

html {
    display: block;
    color: CanvasText;
}

/* children of the <head> element all have display:none as below */
area, base, basefont, datalist, head, link, meta, noembed, noframes,
param, rp, script, style, template, title {
    display: none;
}

/* generic block-level elements */

body {
    display: block;
    margin: 8px;
}

p {
    display: block;
    margin-block: 1__qem;
    margin-inline: 0;
}

address, article, aside, div, footer, header, hgroup, main, nav, search, section {
    display: block;
}

marquee {
    display: inline-block;
    text-align: initial;
    overflow: hidden !important;
}

blockquote {
    display: block;
    margin-block: 1__qem 1em;
    margin-inline: 40px;
}

figcaption {
    display: block;
}

figure {
    display: block;
    margin-block: 1em;
    margin-inline: 40px;
}

q {
    display: inline;
}

q::before {
    content: open-quote;
}

q::after {
    content: close-quote;
}

center {
    display: block;
    /* special centering to be able to emulate the html4/netscape behaviour */
    text-align: -webkit-center;
}

hr {
    display: block;
    overflow: hidden;
    color: gray;
    margin-block: 0.5em;
    margin-inline: auto;
    border-style: inset;
    border-width: 1px;
}

abbr[title], acronym[title] {
    text-decoration: dotted underline;
}

/* ::backdrop */

::backdrop {
    display: block;
    position: fixed;
    inset: 0;
}

/* dialog */

dialog {
    position: absolute;
    inset-inline: 0;
    width: fit-content;
    height: fit-content;
    margin: auto;
    border: solid;
    padding: 1em;
    background-color: Canvas;
    color: CanvasText;
    display: none;
}

dialog[open] {
    display: block;
}

dialog:modal {
    position: fixed;
    overflow: auto;
    inset-block: 0;
    max-width: calc(100% - 6px - 2em);
    max-height: calc(100% - 6px - 2em);
    visibility: visible;
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.1);
}

/* media elements */

body:-internal-media-document {
    background-color: rgb(38, 38, 38);
}

video {
    object-fit: contain;
#if defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY
    -webkit-tap-highlight-color: transparent;
#endif
    content: normal !important;
}

#if defined(ENABLE_GPU_PROCESS_MODEL) && ENABLE_GPU_PROCESS_MODEL
model {
    background-color: black;
}
#endif

audio {
    width: 200px;
    height: 25px;
}

audio:not([controls]) {
    display: none !important;
}

/* heading elements */

h1 {
    display: block;
    font-size: 2em;
    margin-block: 0.67__qem 0.67em;
    margin-inline: 0;
    font-weight: bold;
}

h2 {
    display: block;
    font-size: 1.5em;
    margin-block: 0.83__qem 0.83em;
    margin-inline: 0;
    font-weight: bold;
}

h3 {
    display: block;
    font-size: 1.17em;
    margin-block: 1__qem 1em;
    margin-inline: 0;
    font-weight: bold;
}

h4 {
    display: block;
    margin-block: 1.33__qem 1.33em;
    margin-inline: 0;
    font-weight: bold;
}

h5 {
    display: block;
    font-size: .83em;
    margin-block: 1.67__qem 1.67em;
    margin-inline: 0;
    font-weight: bold;
}

h6 {
    display: block;
    font-size: .67em;
    margin-block: 2.33__qem 2.33em;
    margin-inline: 0;
    font-weight: bold;
}

/* tables */

table {
    display: table;
    border-collapse: separate;
    border-spacing: 2px;
    text-indent: initial;
    box-sizing: border-box;
}

thead {
    display: table-header-group;
    vertical-align: middle;
    border-color: inherit;
}

tbody {
    display: table-row-group;
    vertical-align: middle;
    border-color: inherit;
}

tfoot {
    display: table-footer-group;
    vertical-align: middle;
    border-color: inherit;
}

/* for tables without table section elements (can happen with XHTML or dynamically created tables) */
table > tr {
    vertical-align: middle;
}

col {
    display: table-column;
}

colgroup {
    display: table-column-group;
}

tr {
    display: table-row;
    vertical-align: inherit;
    border-color: inherit;
}

td, th {
    display: table-cell;
    vertical-align: inherit;
}

th {
    font-weight: bold;
    text-align: -internal-th-center;
}

caption {
    display: table-caption;
    text-align: -webkit-center;
}

/* for table elements with form inside following rules should apply */
:is(table, thead, tbody, tfoot, tr) > form:-internal-html-document {
    display: none !important;
}

/* lists */

ul, menu, dir {
    display: block;
    list-style-type: disc;
    margin-block: 1__qem 1em;
    padding-inline-start: 40px;
}

ol {
    display: block;
    list-style-type: decimal;
    margin-block: 1__qem 1em;
    padding-inline-start: 40px;
}

li {
    display: list-item;
    text-align: match-parent;
}

/* The rightmost selector is written explicitly rather than with :is() to help with RuleSet bucketing.*/
:is(dir, dl, menu, ol, ul) dir,
:is(dir, dl, menu, ol, ul) dl,
:is(dir, dl, menu, ol, ul) menu,
:is(dir, dl, menu, ol, ul) ol,
:is(dir, dl, menu, ol, ul) ul {
    margin-block: 0;
}
/* ... */

